--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WebScockets 101</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-        <link href="/styles.css" rel="stylesheet" />
+        <title>WebSockets 101</title>
+        <script src="socket.io.js"></script>
+        <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
 
@@ -21,5 +21,5 @@
 
 
     </body>
-    <script src="/chat.js"></script>
+    <script src="chat.js"></script>
 </html>
