--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>WebSockets 101</title>
+        <title>Chat</title>
         <script src="socket.io.js"></script>
         <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
 
         <div id="mario-chat">
-            <h2>Mario Chat</h2>
+            <h2>Chat</h2>
             <div id="chat-window">
                 <div id="output"></div>
                 <div id="feedback"></div>
